<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_alignParentTop="true">
        <EditText
            android:id="@+id/edit_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/_192_168_1_0"
            android:ems="7"
            android:inputType="textUri"/>
        <Button
            android:id="@+id/accept_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change"
            android:textAllCaps="false"/>
    </LinearLayout>
    <GridLayout
        android:id="@+id/grid_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">
        <EditText
            android:id="@+id/send_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/text"
            android:ems="7"
            android:layout_row="0"
            android:layout_column="0"
            android:inputType="text"/>
        <Button
            android:id="@+id/btn_send_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send"
            android:textAllCaps="false"/>
        <TextView
            android:id="@+id/text_resp_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/server_response"/>
        <EditText
            android:id="@+id/send_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/text"
            android:ems="7"
            android:layout_row="1"
            android:layout_column="0"
            android:inputType="text"/>
        <Button
            android:id="@+id/btn_send_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send"
            android:textAllCaps="false"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/server_response"
            android:gravity="center"
            />


    </GridLayout>

</RelativeLayout>